# hermes-agent-cn-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.en-US.md  README.md  README.zh-CN.md  REVIEW_REPORT.md  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json
.codex/skills/desktop-dual-repo-test/: SKILL.md
.codex/skills/desktop-release-preflight/: SKILL.md
.codex/skills/desktop-release-sync-landing/: SKILL.md
.github/workflows/: release-desktop.yml  rust-test.yml  web-test.yml
capabilities/: default.json
docs/: custom-model-context-window.md  gateway-connection-overhaul.md  hot-update-impl-plan.md  hot-update-plan.md  macos-signing-and-notarization.md  managed-runtime.md  yolo-mode.md
docs/desktop-prd/: 01-prd.md  02-information-architecture.md  03-feature-specs.md  04-backend-contract.md  05-feature-parity-gap.md  README.md
icons/: icon.icns
installer/nsis/: SimpChinese.nsh
legal/: EULA.zh-CN.rtf  EULA.zh-CN.txt
scripts/: build.py  generate-license-rtf.mjs  install-local-runtime.mjs  install-release-dmg.mjs  migrate-runtime-trees.mjs  only-pnpm.mjs  run.py  sign-macos-runtime-payload.sh  stage-bundled-plugins.mjs  stage-bundled-runtime.mjs  stage-bundled-skills.mjs  stage-dashboard-web-dist.mjs  sync-desktop-version.mjs  tauri-dev-external.mjs  tauri-dev-managed.mjs  verify-macos-runtime-payload.sh
src/: bootstrap.rs  connection.rs  cron_runs.rs  env_file.rs  environment.rs  error.rs  http_client.rs  lib.rs  main.rs  path_resolver.rs  prevent_sleep.rs  session_archive.rs  session_log.rs  state.rs  tray.rs  ui_store.rs  update_stage.rs  util.rs
src/commands/: api_proxy.rs  backup.rs  config_migration.rs  connection.rs  debug_bundle.rs  desktop_update.rs  environment.rs  file_dialogs.rs  gateway.rs  im_onboarding.rs  memory.rs  mod.rs  notify.rs  preview.rs  profiles.rs  restart.rs  runtime_manager.rs  skills.rs  sse_proxy.rs  terminal.rs  ui_store.rs  ws_proxy.rs  yolo.rs
src/process/: dashboard.rs  gateway.rs  mod.rs  runtime.rs
tests/: api_proxy.rs  connection_config.rs  connection_ws_e2e.rs  runtime_manifest.rs
web/: .env.example  package.json  vite-env.d.ts  vite.config.ts
web/design-preview/: README.md  preview.css
web/design-preview/profile/: 01-profiles-list.html  02-profile-detail.html  03-runtime-health.html  04-personal-center.html  index.html
web/src/: app.tsx  main.tsx
web/src/components/: desktop-update-notifier.module.css  desktop-update-notifier.tsx  profile-switch-overlay.tsx  runtime-update-overlay.tsx
web/src/hooks/: use-analytics.ts  use-composer-timer.ts  use-config.ts  use-create-and-send-session.ts  use-cron.test.ts  use-cron.ts  use-env.ts  use-environment-check.ts  use-fs-list.ts  use-gateway-restart.ts  use-gateway.ts  use-im-onboarding.ts  use-logs.ts  use-mcp-servers.ts  use-memory.ts  use-mic-recorder.ts  use-model-options.ts  use-oauth-providers.ts  use-profiles.test.ts  use-profiles.ts  use-provider-catalog.ts  use-runtime-update.ts  use-session-resolution.test.ts  use-session-resolution.ts  use-session-turn-stats.ts  use-session-usage-polling.ts  use-sessions.test.ts  use-sessions.ts  use-skills.ts  use-soul.ts  use-stall-watchdog.ts  use-status.ts  use-yolo-mode.ts
web/src/lib/: analytics.test.ts  analytics.ts  approval-mode.test.ts  approval-mode.ts  build-info.ts  builtin-commands.test.ts  builtin-commands.ts  busy-input-mode.test.ts  busy-input-mode.ts  clipboard-image.test.ts  clipboard-image.ts  cn-provider-slugs.test.ts  cn-provider-slugs.ts  command-palette-shortcut.test.ts  command-palette-shortcut.ts  command-palette.test.ts  command-palette.ts  composer-mentions.test.ts  composer-mentions.ts  composer-prompt.test.ts  composer-prompt.ts  composer-skills.test.ts  composer-skills.ts  composer-submit-shortcut.test.ts  composer-submit-shortcut.ts  composer-url.test.ts  composer-url.ts  compress-feedback.test.ts  compress-feedback.ts  config-migration-assistant.test.ts  config-migration-assistant.ts  config-translations.test.ts  config-translations.ts  config-update.test.ts  config-update.ts  context-usage.test.ts  context-usage.ts  dashboard-url.test.ts  dashboard-url.ts  debug-install.ts  (+83 more)
web/src/routes/: advanced.tsx  analytics.module.css  analytics.tsx  backup.test.ts  backup.tsx  config-migration.module.css  config-migration.tsx  console.module.css  console.tsx  cron.module.css  cron.tsx  debug.module.css  debug.tsx  detail.module.css  detail.tsx  environment.test.ts  environment.tsx  health.tsx  history.module.css  history.tsx  im-onboarding.module.css  im-onboarding.test.ts  im-onboarding.tsx  memory.module.css  memory.tsx  new-task.tsx  panel.module.css  panel.tsx  profiles.tsx  project-detail.module.css  project-detail.tsx  projects.module.css  projects.tsx  section-shell.module.css  section-shell.tsx  settings-analytics-section.tsx  settings-connection-section.tsx  settings-debug-section.tsx  settings-hero.tsx  settings-models-section.tsx  (+11 more)
web/src/stores/: chat.test.ts  chat.ts  composer-queue.test.ts  (+8 more)
(+102 files in other folders)
